campaings and thank pages as handlebars templates

--- a/nodejs/views/campaign.hbs
+++ b/nodejs/views/campaign.hbs
@@ -127,32 +127,32 @@
           <div class="counter__type">secs</div>
         </div>
       </div>
-      <div class="progress js-progress">
+      <div class="progress">
         <div class="progress__el">
-          <div class="progress__range js-progress-range"></div>
+          <div class="progress__range" style="width: {{progressPercentage campaign_goal items_sold}}"></div>
         </div>
         <div class="progress__wrap">
           <div class="progress__info">
             <div class="progress__info-wrap">
-              <div class="progress__val js-progress-percent"></div>
+              <div class="progress__val">{{progressPercentage campaign_goal items_sold}}</div>
               <div class="progress__type">funded</div>
             </div>
           </div>
           <div class="progress__info">
             <div class="progress__info-wrap">
-              <div class="progress__val js-progress-sold">{{items_sold}}</div>
+              <div class="progress__val">{{items_sold}}</div>
               <div class="progress__type">sold</div>
             </div>
           </div>
           <div class="progress__info">
             <div class="progress__info-wrap">
-              <div class="progress__val js-progress-goal">{{campaign_goal}}</div>
+              <div class="progress__val">{{campaign_goal}}</div>
               <div class="progress__type">goal</div>
             </div>
           </div>
         </div>
       </div>
-      <div class="info"> 
+      <div class="info">
         <div class="info__icon"><i class="icon icon-info"></i></div>
         <div class="info__wrap">You will only be charged if this campaign reaches its goal.</div>
       </div>
@@ -328,7 +328,7 @@
       <div class="similar__slide">
         <div class="similar__item item">
           <div class="item__wrap">
-            <div class="item__price">18$</div><img src="assets/images/product.jpg" alt="" class="item__pic">
+            <div class="item__price">18$</div><img src="assets/img/product.jpg" alt="" class="item__pic">
             <div class="item__head">
               <div class="item__author">Robert Downey Jr.</div>
               <div class="item__title">Official Iron Man T-shirt</div>
@@ -354,7 +354,7 @@
       <div class="similar__slide">
         <div class="similar__item item">
           <div class="item__wrap">
-            <div class="item__price">18$</div><img src="assets/images/product.jpg" alt="" class="item__pic">
+            <div class="item__price">18$</div><img src="assets/img/product.jpg" alt="" class="item__pic">
             <div class="item__head">
               <div class="item__author">Robert Downey Jr.</div>
               <div class="item__title">Official Iron Man T-shirt</div>
@@ -380,7 +380,7 @@
       <div class="similar__slide">
         <div class="similar__item item">
           <div class="item__wrap">
-            <div class="item__price">18$</div><img src="assets/images/product.jpg" alt="" class="item__pic">
+            <div class="item__price">18$</div><img src="assets/img/product.jpg" alt="" class="item__pic">
             <div class="item__head">
               <div class="item__author">Robert Downey Jr.</div>
               <div class="item__title">Official Iron Man T-shirt</div>
@@ -406,7 +406,7 @@
       <div class="similar__slide">
         <div class="similar__item item">
           <div class="item__wrap">
-            <div class="item__price">18$</div><img src="assets/images/product.jpg" alt="" class="item__pic">
+            <div class="item__price">18$</div><img src="assets/img/product.jpg" alt="" class="item__pic">
             <div class="item__head">
               <div class="item__author">Robert Downey Jr.</div>
               <div class="item__title">Official Iron Man T-shirt</div>
@@ -432,7 +432,7 @@
       <div class="similar__slide">
         <div class="similar__item item">
           <div class="item__wrap">
-            <div class="item__price">18$</div><img src="assets/images/product.jpg" alt="" class="item__pic">
+            <div class="item__price">18$</div><img src="assets/img/product.jpg" alt="" class="item__pic">
             <div class="item__head">
               <div class="item__author">Robert Downey Jr.</div>
               <div class="item__title">Official Iron Man T-shirt</div>
