--- a/nodejs/views/index.hbs
+++ b/nodejs/views/index.hbs
@@ -1,1 +1,5 @@
-hello world!!!
+<ul>
+  <li><a href="/campaign">campaign</a></li>
+  <li><a href="/campaigns">campaigns</a></li>
+  <li><a href="/thank">thank</a></li>
+</ul>
